--- a/src/css/pages/index-page.css
+++ b/src/css/pages/index-page.css
@@ -86,6 +86,7 @@
   margin: 0 auto 2rem;
   padding: 2rem;
   border-radius: 1rem;
+  overflow: hidden;
 }
 .index-page .formulario-contacto fieldset {
   border: none;
