--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -9,6 +9,7 @@
   --gris: #757575;
   --grisOscuro: #333333;
   --grisClaro: #dfe9f3;
+  --grisMuyClaro: #f7f7f7;
   --success: #2dd36f;
   --success-contrast: #000000;
   --danger: #eb445a;
