--- a/src/css/pages/servicios.css
+++ b/src/css/pages/servicios.css
@@ -22,6 +22,7 @@
   flex-direction: row;
   justify-content: center;
   margin-bottom: 3rem;
+  flex-wrap: wrap;
 }
 .servicios-page .servicio-card .icono {
   margin: 0.2rem;
