--- a/src/css/pages/contacto.css
+++ b/src/css/pages/contacto.css
@@ -10,8 +10,8 @@
 }
 .contacto-page .contenido-hero {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.7); /** Anterior **/
-  background-color: rgb(0 0 0 / 70%);
+  background-color: rgba(0, 0, 0, 0.7);
+  /*background-color: rgb(0 0 0 / 70%);*/ /** Forma moderna **/
   width: 100%;
   height: 100%;
 
