--- a/src/css/pages/index-page.css
+++ b/src/css/pages/index-page.css
@@ -10,11 +10,10 @@
 }
 .index-page .contenido-hero {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.7); /** Anterior **/
-  background-color: rgb(0 0 0 / 70%);
+  background-color: rgba(0, 0, 0, 0.7);
+  /*background-color: rgb(0 0 0 / 70%);*/ /** Forma moderna **/
   width: 100%;
   height: 100%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
