--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,7 +4,8 @@
 @import url("base/globales.css");
 @import url("base/componentes.css");
 @import url("base/utilidades.css");
-@import url("layout/header.css");
+@import url("layout/zona-superior.css");
+@import url("layout/sidebar.css");
 @import url("layout/footer.css");
 @import url("pages/index-page.css");
 @import url("pages/contacto.css");
