Añadido icono-enlace twitter

--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -15,6 +15,7 @@
   --success-contrast: #000000;
   --danger: #eb445a;
   --danger-contrast: #ffffff;
+  --color-twitter: #00a5e5;
 
   /*tipografia*/
   --fuente_principal: "Lato", sans-serif;
