--- a/src/css/pages/index-page.css
+++ b/src/css/pages/index-page.css
@@ -1,4 +1,5 @@
 /** Pagina index **/
+
 /* Hero */
 .index-page .hero {
   background-image: url(../../assets/img/laptop.jpg);
@@ -101,7 +102,8 @@
 @media (min-width: 768px) {
   .index-page .formulario-contacto .contenedor-campos {
     display: grid;
-    grid-template-columns: 50% 50%;
+    /*grid-template-columns: 50% 50%;*/
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto auto auto;
     column-gap: 1rem;
   }
