--- a/src/css/pages/servicios.css
+++ b/src/css/pages/servicios.css
@@ -1,20 +1,38 @@
+.servicios-page .servicios h2 {
+  margin-bottom: 6rem;
+}
+
+.servicios-page .servicio-card {
+  opacity: 0;
+  padding: 3rem 2rem;
+  border: 1px solid var(--gris);
+  border-radius: 1rem;
+  overflow: hidden;
+  margin-bottom: 1rem;
+}
+.servicio-card:nth-child(odd) {
+  /*odd / even: impares/pares*/
+  background-color: var(--grisClaro);
+}
+.servicio-card:nth-child(even) {
+  background-color: var(--amarillo-claro);
+}
 @media (min-width: 768px) {
   .servicios-page .contenedor-servicios {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
   }
-}
-.servicios-page .servicios h2 {
-  margin-bottom: 6rem;
-}
-.servicios-page .servicio-card {
-  background-color: var(--grisClaro);
-  padding: 3rem 2rem;
-  border: 1px solid var(--gris);
-  border-radius: 1rem;
-  overflow: hidden;
-  margin-bottom: 1rem;
+  .servicio-card:nth-child(1),
+  .servicio-card:nth-child(4),
+  .servicio-card:nth-child(5) {
+    background-color: var(--grisClaro);
+  }
+  .servicio-card:nth-child(2),
+  .servicio-card:nth-child(3),
+  .servicio-card:nth-child(6) {
+    background-color: var(--amarillo-claro);
+  }
 }
 
 .servicios-page .servicio-card .iconos {
@@ -32,7 +50,7 @@
   justify-content: center;
   height: 7rem;
   width: 7rem;
-  background-color: var(--secundario);
+
   border-radius: 50%;
   /*padding: 0.5rem;*/
   flex-shrink: 0;
@@ -48,8 +66,26 @@
   margin: 0 auto;
   font-size: 1rem;
 }
+.servicio-card:nth-child(odd) .icono {
+  background-color: var(--secundario);
+}
+.servicio-card:nth-child(even) .icono {
+  background-color: var(--amarillo);
+}
+@media (min-width: 768px) {
+  .servicio-card:nth-child(1) .icono,
+  .servicio-card:nth-child(4) .icono,
+  .servicio-card:nth-child(5) .icono {
+    background-color: var(--secundario);
+  }
+  .servicio-card:nth-child(2) .icono,
+  .servicio-card:nth-child(3) .icono,
+  .servicio-card:nth-child(6) .icono {
+    background-color: var(--amarillo);
+  }
+}
 .servicios-page .servicio-card .titulo {
-  color: var(--primario);
+  color: var(--azul);
   font-size: 2rem;
   font-weight: bold;
 }
