--- a/src/css/base/componentes.css
+++ b/src/css/base/componentes.css
@@ -69,3 +69,14 @@
   padding: 1rem;
   line-height: 2rem;
 }
+.fade-in {
+  animation: fadeIn 1s ease-out forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
