--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
+/*@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");*/
+/*@import url("https://fonts.googleapis.com/css2?family=Grandstander&display=swap");*/
+@import url("https://fonts.googleapis.com/css2?family=Grandstander&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("base/normalize.css");
 @import url("base/variables.css");
 @import url("base/globales.css");
