Modificaciones en los fadein para hacerlos más visibles( con delay) y quitado el fadein de inicio a los que ya rebasan el scroll

--- a/src/css/base/componentes.css
+++ b/src/css/base/componentes.css
@@ -70,7 +70,8 @@
   line-height: 2rem;
 }
 .fade-in {
-  animation: fadeIn 1s ease-out forwards;
+  animation: fadeIn 0.5s ease-out forwards;
+  animation-delay: 0.3s;
 }
 @keyframes fadeIn {
   0% {
