Delay en animaciones, optimizado animaziones.js con map

--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -5,6 +5,7 @@
   --negro: #000000;
   --azul: #0040ff;
   --primario: #00a5e5;
+  --primario-tint: #4c8dff;
   --secundario: #86d3ff;
   --amarillo: #ffc107;
   --amarillo-claro: #e8dcbe;
