--- a/src/css/base/componentes.css
+++ b/src/css/base/componentes.css
@@ -22,6 +22,11 @@
   width: 90%;
   text-align: center;
   border: none;
+  transition: background-color 0.5s;
+}
+.boton:hover {
+  background-color: var(--secundario);
+  color: var(--negro);
 }
 .boton:disabled {
   opacity: 0.4;
